--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -13,7 +13,9 @@ jobs:
       run: echo Hello, world!hello blank
     - name: Run a one-line script
       run: ls -l
+    - name: Run a go
+      run: go run main.go 
     - name: Run a multi-line script
       run: |
-        echo Add other actions to build,
+        echo Add other actions to build
 
